fix(VDataTable): prevent layout shift when changing pages

--- a/packages/vuetify/src/components/VDataTable/VDataTable.sass
+++ b/packages/vuetify/src/components/VDataTable/VDataTable.sass
@@ -21,6 +21,8 @@
 .v-data-table
   .v-table__wrapper
     > table
+      table-layout: fixed
+
       > thead,
         tbody
         > tr
